# auth-manager-mailu

./: LICENSE  Readme.md  pyproject.toml
mailu_auth/: app.py  config.py  dovecot.py  nginx_auth.py  postfix.py
mailu_auth/access_api/: __init__.py  oauth.py
mailu_auth/templates/: default.sieve
